# suppaftp

./: .gitignore  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  deny.toml  dprint.json
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  security.md
.github/actions-rs/: grcov.yml
.github/workflows/: all-features.yml  cargo.yml  ci.yml  cli.yml  cocogitto.yml  codeberg-mirror.yml  coverage.yml  test.yml  zizmor.yml
cli/: actions.rs  command.rs  main.rs
crates/suppaftp/: Cargo.toml
crates/suppaftp-cli/: Cargo.toml
crates/suppaftp-cli/src/: actions.rs  command.rs
crates/suppaftp/src/: async_ftp.rs  command.rs  lib.rs  list.rs  regex.rs  sync_ftp.rs  test_container.rs  types.rs
crates/suppaftp/src/async_ftp/: smol_ftp.rs  tokio_ftp.rs
crates/suppaftp/src/async_ftp/async_std_ftp/: mod.rs
crates/suppaftp/src/async_ftp/async_std_ftp/tls/: native_tls.rs
crates/suppaftp/src/async_ftp/smol_ftp/: data_stream.rs  tls.rs
crates/suppaftp/src/async_ftp/smol_ftp/tls/: native_tls.rs  rustls.rs
crates/suppaftp/src/async_ftp/tokio_ftp/: data_stream.rs  mod.rs
crates/suppaftp/src/async_ftp/tokio_ftp/tls/: native_tls.rs
crates/suppaftp/src/command/: feat.rs
crates/suppaftp/src/list/: file.rs  file_type.rs
crates/suppaftp/src/sync_ftp/: data_stream.rs  mod.rs  tls.rs
crates/suppaftp/src/sync_ftp/tls/: rustls.rs
examples/: connecting.rs
just/: build.just  changelog.just  code_check.just  publish.just  test.just
scripts/: cargo.sh  lint.sh
src/: command.rs  data_stream.rs  ftp.rs  lib.rs  list.rs  status.rs  types.rs
src/async_ftp/: data_stream.rs  mod.rs  tls.rs
src/async_ftp/tls/: native_tls.rs  rustls.rs
src/sync_ftp/: data_stream.rs  mod.rs
src/sync_ftp/tls/: native_tls.rs
suppaftp/: Cargo.toml
suppaftp-cli/: Cargo.toml
suppaftp-cli/src/: actions.rs  args.rs  command.rs  main.rs
suppaftp/examples/: rustls.rs
suppaftp/src/: async_ftp.rs  command.rs  lib.rs  list.rs  regex.rs  status.rs  test_container.rs  types.rs
suppaftp/src/async_ftp/: data_stream.rs  mod.rs  tls.rs
suppaftp/src/async_ftp/async_std_ftp/: data_stream.rs  mod.rs  tls.rs
suppaftp/src/async_ftp/async_std_ftp/tls/: native_tls.rs  rustls.rs
suppaftp/src/async_ftp/tls/: native_tls.rs  rustls.rs
suppaftp/src/async_ftp/tokio_ftp/: data_stream.rs  mod.rs  tls.rs
suppaftp/src/async_ftp/tokio_ftp/tls/: native_tls.rs  rustls.rs
suppaftp/src/async_tokio/: mod.rs  tls.rs
suppaftp/src/async_tokio/tls/: native_tls.rs
suppaftp/src/command/: feat.rs
suppaftp/src/list/: file.rs  pex.rs
suppaftp/src/sync_ftp/: data_stream.rs  mod.rs  tls.rs
suppaftp/src/sync_ftp/tls/: native_tls.rs  rustls.rs
tests/: docker-compose.yml  lib.rs  test.sh
