[workspace]
members = ["suppaftp", "suppaftp-cli"]
resolver = "2"

[workspace.package]
version = "7.0.2"
edition = "2024"
rust-version = "1.85.1"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
repository = "https://github.com/veeso/suppaftp"
license = "MIT OR Apache-2.0"
keywords = ["ftp", "ftps", "network-protocol", "async", "ftp-client"]
categories = ["asynchronous", "network-programming"]
