[workspace]
members = ["crates/suppaftp", "crates/suppaftp-cli"]
resolver = "2"

[workspace.package]
version = "8.0.5"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["asynchronous", "network-programming"]
edition = "2024"
keywords = ["ftp", "ftps", "network-protocol", "async", "ftp-client"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/veeso/suppaftp"
rust-version = "1.85.1"
