[workspace]
members = ["crates/suppaftp", "crates/suppaftp-cli"]
resolver = "2"

[workspace.package]
version = "9.0.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["asynchronous", "network-programming"]
edition = "2024"
keywords = ["ftp", "ftps", "network-protocol", "async", "ftp-client"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/veeso/suppaftp"
rust-version = "1.85.1"

[workspace.dependencies]
argh = "0.1"
async-native-tls-crate = { package = "async-native-tls", version = "0.6", default-features = false }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false }
env_logger = "0.11"
futures-rustls = { version = "0.26", default-features = false }
lazy-regex = "3"
log = "0.4"
native-tls-crate = { package = "native-tls", version = "0.2" }
pin-project = "1"
pretty_assertions = "1"
rand = "0.10"
rpassword = "7.2"
rustls-crate = { package = "rustls", version = "0.23", default-features = false }
rustls-pki-types = "1"
smol = "2"
suppaftp = { path = "crates/suppaftp", version = "9" }
testcontainers = "0.27"
thiserror = "2"
tokio = "1"
tokio-rustls-crate = { package = "tokio-rustls", version = "0.26", default-features = false }
webpki-roots = "1"
