[package]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
description = "FTP command line client, based on suppaftp"
homepage = "https://github.com/veeso/suppaftp"
include = ["src/**/*", "../LICENSE", "../README.md", "../CHANGELOG.md"]
name = "suppaftp-cli"
readme = "../README.md"

[[bin]]
name = "suppaftp"
path = "src/main.rs"

[dependencies]
argh = "^0.1"
env_logger = "^0.11"
log = "^0.4"
rpassword = "^7.2"
suppaftp = { path = "../suppaftp", version = "^6.0", features = ["native-tls"] }
