[package]
name = "suppaftp-cli"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = "https://github.com/veeso/suppaftp"
include = [
  "src/**/*",
  "../../LICENSE-MIT",
  "../../LICENSE-APACHE",
  "../../README.md",
  "../../CHANGELOG.md",
]
keywords = { workspace = true }
license = { workspace = true }
readme = "../../README.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "FTP command line client, based on suppaftp"

[[bin]]
name = "suppaftp"
path = "src/main.rs"

[dependencies]
argh = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rpassword = { workspace = true }
suppaftp = { workspace = true, features = ["native-tls"] }
